bug 20171 - collapse go button when search bar is empty and increase default width of searchbar
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17614 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/content/bindings/search.css
+++ b/feathers/purplerain/chrome/content/bindings/search.css
@@ -45,7 +45,7 @@ Imported by bindings.css or directly into feathers.
 
 
 #searchbar-container {
-  max-width: 156px;
+  max-width: 180px;
 }
 
 .search-go-button,
